<resources>
    <string name="app_name">Wine WMS</string>
    <string name="company_name">Wine Warehouse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wishlist">WishList</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_control">Control</string>
    <string name="title_cart">Cart</string>
    <string name="image_logo">Image Logo</string>
    <string name="image_background">Image Background</string>
    <string name="image_arrow">Image Arrow</string>
    <string name="labelName">Name</string>
    <string name="labelAccountDetails">Account Details</string>
    <string name="labelFirstName">First Name:</string>
    <string name="txtFirstName" />
    <string name="labelLastName">Last Name:</string>
    <string name="txtLastName" />
    <string name="labelEmail">E-mail:</string>
    <string name="txtEmail" />
    <string name="labelPassword">Password:</string>
    <string name="txtPassword" />
    <string name="labelConfirmPassword">Confirm Password:</string>
    <string name="txConfirmPassword" />
    <string name="labelPhone">Telephone:</string>
    <string name="txtPhone" />
    <string name="labelAddress">Address:</string>
    <string name="labelAddressLineOne">Address:</string>
    <string name="txtAddressLineOne" />
    <string name="labelCity">City:</string>
    <string name="txtCity" />
    <string name="labelState">State:</string>
    <string name="txtState" />
    <string name="labelPostalCode">Postal Code:</string>
    <string name="txtPostalCode" />
    <string name="labelCountry">Country:</string>
    <string name="txtCountry" />
    <string name="labelOrders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnSignin">Sign In</string>
    <string name="labelDontHaveAcc">Don\'t have account?</string>
    <string name="btnGoToSignup">Sign Up</string>
    <string name="txtRecoverPassword">Recover Password</string>
    <string name="labelLogout">Logout</string>
    <string name="labelLogin">Login</string>
    <string name="txtPrice">$ .00</string>
    <string name="txtWineName">Wine Name</string>
    <string name="txtWineProcuder">Producer</string>
    <string name="txtWineCountry">Country/Region</string>
    <string name="txtWineSearch" />
    <string name="txtWineSearchHint">Search any wine</string>
    <string name="txtSalesSearchHint">Search sales by wine</string>
    <string name="labelFeattuedWines">Featured wines</string>
    <string name="txtDiscount">Save %</string>
    <string name="txtOginalPrice">$ .00</string>
    <string name="btnAddToCart">Add to Cart</string>
    <string name="btnEditWine">Edit Wine</string>
    <string name="txtSummary">Summary</string>
    <string name="txtWineDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="labelGrapes">Grapes</string>
    <string name="txtGrapes">grape</string>
    <string name="labelTasteCharacteristics">Taste Characteristics</string>
    <string name="labelLight">Light</string>
    <string name="labelBold">Bold</string>
    <string name="labelSmooth">Smooth</string>
    <string name="labelTannic">Tannic</string>
    <string name="labelDry">Dry</string>
    <string name="labelSweet">Sweet</string>
    <string name="labelSoft">Soft</string>
    <string name="labelAcidic">Acidic</string>
    <string name="labelFoodPair">Pairs well with</string>
    <string name="txtFoodPair">Beef, Lamb</string>
    <string name="labelWineReviews">Reviews</string>
    <string name="txtType">Red</string>
    <string name="labelHarvest">Harvest</string>
    <string name="txtHarvest">year</string>
    <string name="txtNoResults">No wines found.</string>
    <string name="btnRemoveItem">Remove</string>
    <string name="labelShopByType">Shop wines by category</string>
    <string name="btnRedWine">Red</string>
    <string name="btnRoseWine">Rose</string>
    <string name="btnWhiteWine">White</string>
    <string name="btnOrangeWine">Orange Wine</string>
    <string name="btnDessertWine">Dessert Wine</string>
    <string name="btnSparklingWine">Sparkling</string>
    <string name="btnResetCart">Empty Cart</string>
    <string name="btnCheckout">Checkout</string>
    <string name="btn_apply_filters">Apply Filters</string>
    <string name="labelShoppingCart">Your Shopping Cart</string>
    <string name="labelShippingAddress">Shipping Address</string>
    <string name="chkUseUserAddress">Your Address</string>
    <string name="txtTotalPrice">Total $ .00</string>
    <string name="txtQuantity">"Quantity: "</string>
    <string name="txtDiscountedTotal">"Save Total: "</string>
    <string name="btn_clear_filters">Clear</string>
    <string name="labelSignup">Thank you for signing up! We\'re thrilled to have you on board. Let\'s get started on this amazing journey together!</string>
    <string name="txtSignoffAccount">Signoff Account</string>
    <string name="txtSignoffEmail" />
    <string name="txtSignoffPassword" />
    <string name="btnSignoffAccount">Signoff</string>
    <string name="labelType">Account type</string>
    <string name="labelAddWine">Add New Wine</string>
    <string name="txtAddWineName" />
    <string name="txtAddWineProducer" />
    <string name="txtAddWineCountry" />
    <string name="txtAddWineHarvest" />
    <string name="txtAddWineDescription" />
    <string name="txtAddWineDescriptionHint">Description</string>
    <string name="txtAddWineRate" />
    <string name="txtAddWineRateHint">Wine rate</string>
    <string name="txtAddWineReviewsHint">Reviews. Use semi-colon to separate them.</string>
    <string name="txtAddWineReviews" />
    <string name="labelWineGrapes">Grapes:</string>
    <string name="checkBoxCabernetSauvignon">Cabernet Sauvignon</string>
    <string name="checkBoxMerlot">Merlot</string>
    <string name="checkBoxMalbec">Malbec</string>
    <string name="checkBoxPinotNoir">Pinot Noir</string>
    <string name="checkBoxSyrah">Syrah</string>
    <string name="checkBoxZinfandel">Zinfandel</string>
    <string name="checkBoxTempranillo">Tempranillo</string>
    <string name="checkBoxSangiovese">Sangiovese</string>
    <string name="checkBoxGrenache">Grenache</string>
    <string name="checkBoxChardonnay">Chardonnay</string>
    <string name="checkBoxSauvignonBlanc">Sauvignon Blanc</string>
    <string name="checkBoxPinotGrigio">Pinot Grigio</string>
    <string name="checkBoxOtherGrapes">Other Grapes</string>
    <string name="txtTasteCharacteristics">Taste Characteristics:</string>
    <string name="txtLightness">Lightness</string>
    <string name="txtTannin">Tannin</string>
    <string name="txtDryness">Dryness</string>
    <string name="txtAcidity">Acidity</string>
    <string name="checkBoxStake">Stake</string>
    <string name="checkBoxLamb">Lamb</string>
    <string name="checkBoxChicken">Chicken</string>
    <string name="checkBoxPork">Pork</string>
    <string name="checkBoxPasta">Pasta</string>
    <string name="checkBoxAgedCheeses">Aged Cheeses</string>
    <string name="checkBoxSeafood">Seafood</string>
    <string name="checkBoxFish">Fish</string>
    <string name="checkBoxSalad">Salad</string>
    <string name="checkBoxCharcuterie">Charcuterie</string>
    <string name="checkBoxDarkChocolate">Dark Chocolate</string>
    <string name="checkBoxOtherFoods">Others</string>
    <string name="labelAddFoodPair">Food Pairing:</string>
    <string-array name="spinnerWineType">
        <item>Red</item>
        <item>White</item>
        <item>Rose</item>
        <item>Sparkling</item>
        <item>Dessert</item>
        <item>Orange</item>
    </string-array>
    <string name="labelAddPrices">Sale Price:</string>
    <string name="txtSalePrice" />
    <string name="txtSalePriceHint">Sale price: $ .00</string>
    <string name="txtSaleDiscont" />
    <string name="txtSaleDiscontHint">Discount: %</string>
    <string name="labelPurchase">Initial Purchase:</string>
    <string name="txtCostPrice" />
    <string name="txtCostPriceHint">Cost price: $ .00</string>
    <string name="txtStock" />
    <string name="txtStockHint">Initial stock (units)</string>
    <string name="txtNewStockHint">Additional stock (units)</string>
    <string name="txtNewCostPrice">Cost Price $.00</string>
    <string name="btnSaveWine">Add Wine</string>
    <string name="labelSetPricesStock">Prices and Initial Stock</string>
    <string name="txtWarehouseLocation" />
    <string name="txtWarehouseLocationHint">Location</string>
    <string name="txtWarehouseAisle" />
    <string name="txtWarehouseAisleHint">Aisle</string>
    <string name="txtWarehouseShelf" />
    <string name="txtWarehouseShelfHint">Shelf</string>
    <string name="labelStorage">Storage</string>
    <string name="labelInvoice">Invoice:</string>
    <string name="txtInvoiceId">_id000000000</string>
    <string name="labelInvouceDate">Date:</string>
    <string name="txtInvoiceDate">00/00/0000</string>
    <string name="labelInvoiceTitle">INVOICE</string>
    <string name="labelDeliveryOrderTitle">DELIVERY ORDER</string>
    <string name="labelCiaAddress">Richmond, BC</string>
    <string name="labelBillTo">Bill To</string>
    <string name="labelShipTo">Ship To</string>
    <string name="labelInvoiceNumber">Invoice</string>
    <string name="txtBillTo">Customer</string>
    <string name="txtShipTo">Address\nCity, Postal Code</string>
    <string name="txtInvoiceNumber"># 00000000000000\nDate: 00/00/0000</string>
    <string name="labelQty">Qty</string>
    <string name="labelDescription">Description</string>
    <string name="labelUnitPrice">Unit Price</string>
    <string name="labelAmount">Amount</string>
    <string name="labelInvoiceSubTotal">Subtotal</string>
    <string name="txtInvoiceSubTotal">$ 0.00</string>
    <string name="labelGST">GST(5%)</string>
    <string name="txtGST">$ 0.00</string>
    <string name="labelPST">PST(10%)</string>
    <string name="txtPST">$ 0.00</string>
    <string name="labelInvoiceTotal">Total</string>
    <string name="txtInvoiceTotal">$ 0.00</string>
    <string name="labelManagementSuite">Wine Warehouse Management Suite</string>
    <string name="btnProductManagement">Products</string>
    <string name="btnWarehouseManagement">Warehouse</string>
    <string name="btnReportManagement">Reports</string>
    <string name="labelWarehouseManagement">Warehouse Management</string>
    <string name="labelFinancialManagement">Financial Management</string>
    <string name="labelProductManagement">Product Management</string>
    <string name="txtWarehouseWineSearch"></string>
    <string name="txtWarehouseWineSearchHint">Search any wine in the warehouse</string>
    <string name="labelStockQty">Stock</string>
    <string name="txtWarehouseStock">00 Unit(s)</string>
    <string name="labelWarehouseLocation">Location(s)</string>
    <string name="labelCriticalStockLevel">Critical Stock Level</string>
    <string name="labelProductCashFlow">Product Cash Flow</string>
    <string name="labelBreakEvenPoint">Product Break-Even Point</string>
    <string name="labelDispatchOrders">Delivery Orders</string>
    <string name="labelSearchedWine">Wines Found</string>
    <string name="btnFinancialManagement">Financial</string>
    <string name="btnSalesManagement">Sales</string>
    <string name="btnUpdateWine">Update Wine</string>
    <string name="labelPriceStock">Price and Stock</string>
    <string name="labelPriceDiscount">Sales Price($) and Discount(%)</string>
    <string name="labelCurrentStock">Current Stock (Bottle Units)</string>
    <string name="labelNewPurchase">New Purchase (update stock)</string>
    <string name="labelCost">Cost</string>
</resources>