<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_white"
    android:layout_marginVertical="8dp"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutDeliveryOrderHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelDeliveryOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/labelInvoice"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDeliveryOrderInvoiceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInvoiceId"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/labelDeliveryOrderInvouceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:text="@string/labelInvouceDate"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDeliveryOrderInvoiceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInvoiceDate"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDeliveryOrderDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/wine_logo_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelDeliveryOrderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/labelDeliveryOrderTitle"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelCiaAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/labelCiaAddress"
                android:textColor="@color/DarkRedWine"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelBillTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/labelBillTo"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtBillTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/txtBillTo"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelShipTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/labelShipTo"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtShipTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/txtShipTo"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelInvoiceNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/labelInvoiceNumber"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtInvoiceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/txtInvoiceNumber"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/linearLayoutWines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <View
                android:id="@+id/divider22"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>