<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.winewms.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.winewms.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_navigation_cart_to_navigation_checkout"
            app:destination="@id/navigation_checkout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.winewms.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_navigation_signin"
            app:destination="@id/navigation_signin"
            app:popUpTo="@id/navigation_account"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.winewms.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.example.winewms.ui.control.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control" >
        <action
            android:id="@+id/action_navigation_control_to_addWineFragment"
            app:destination="@id/addWineFragment"
            app:popUpTo="@id/addWineFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_control_to_editWineFragment"
            app:destination="@id/editWineFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signin"
        android:name="com.example.winewms.ui.account.signin.SigninFragment"
        android:label="fragment_signin"
        tools:layout="@layout/fragment_signin" >
        <action
            android:id="@+id/action_nav_signin_to_nav_signup"
            app:destination="@id/navigation_signup"
            app:popUpTo="@id/navigation_signin"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_signin_to_navigation_account"
            app:destination="@id/navigation_account"
            app:popUpTo="@id/navigation_signin"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.winewms.ui.account.signup.SignupFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_navigation_signup_to_navigation_account"
            app:destination="@id/navigation_account"
            app:popUpTo="@id/navigation_signup"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.winewms.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.winewms.ui.checkout.CheckoutFragment"
        android:label="fragment_checkout"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_navigation_checkout_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/addWineFragment"
        android:name="com.example.winewms.ui.control.addwine.AddWineFragment"
        android:label="fragment_add_wine"
        tools:layout="@layout/fragment_add_wine" />
    <fragment
        android:id="@+id/editWineFragment"
        android:name="com.example.winewms.ui.control.EditWineFragment"
        android:label="fragment_edit_wine"
        tools:layout="@layout/fragment_edit_wine">
        <argument
            android:name="wineId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

</navigation>