<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_white"
    android:backgroundTint="@color/white"
    android:padding="8dp">

    <!-- Reference to the existing wine card layout -->

    <LinearLayout
        android:id="@+id/linearLayoutWarehouseWineCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/warehouseWineCard"
            layout="@layout/wine_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearWarehouseStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelStockQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelStockQty"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtWarehouseStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtWarehouseStock"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelWarehouseLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelWarehouseLocation"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayoutWarehouseLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
